--- a/src/css/priority.css
+++ b/src/css/priority.css
@@ -90,8 +90,8 @@
 
 @media (max-width: 480px) {
   .priorityBadge {
-    font-size: 4px;
-    padding: 1px 3px;
+    font-size: 1.5px;
+    padding: 0.5px 1px;
     top: 6px;
     left: 6px;
     letter-spacing: 0px;
@@ -101,10 +101,10 @@
 
 @media (max-width: 360px) {
   .priorityBadge {
-    font-size: 3px;
-    padding: 0.5px 1px;
-    top: 4px;
-    left: 4px;
+    font-size: 2.5px;
+    padding: 0.5px 1.5px;
+    top: 6px;
+    left: 6px;
     letter-spacing: 0px;
     border-width: 0.5px;
   }
